[dependencies.getrandom]
features = ["std"]
version = "0.2"

[dependencies.redox_syscall]
version = "0.2.11"

[dependencies.rust-argon2]
optional = true
version = "0.8"

[dependencies.thiserror]
version = "1.0"

[dependencies.zeroize]
features = ["zeroize_derive"]
optional = true
version = "1.4"

[features]
auth = ["rust-argon2", "zeroize"]
default = ["auth"]

[package]
authors = ["Jose Narvaez <goyox86@gmail.com>", "Wesley Hershberger <mggmugginsmc@gmail.com>"]
description = "A Rust library to access Redox users and groups functionality"
documentation = "https://docs.rs/redox_users"
edition = "2018"
keywords = ["redox", "auth"]
license = "MIT"
name = "redox_users"
readme = "README.md"
repository = "https://gitlab.redox-os.org/redox-os/users"
version = "0.4.3"
