[dev-dependencies.doc-comment]
version = "0.3"

[package]
authors = ["Aaronepower <theaaronepower@gmail.com>"]
categories = ["filesystem"]
description = "A safe, reliable implementation of remove_dir_all for Windows"
include = ["Cargo.toml", "LICENCE-APACHE", "LICENCE-MIT", "src/**/*", "README.md"]
keywords = ["utility", "filesystem", "remove_dir", "windows"]
license = "MIT/Apache-2.0"
name = "remove_dir_all"
readme = "README.md"
repository = "https://github.com/XAMPPRocky/remove_dir_all.git"
version = "0.5.3"
[target."cfg(windows)".dependencies.winapi]
features = ["std", "errhandlingapi", "winerror", "fileapi", "winbase"]
version = "0.3"
