[dependencies.cfg-if]
version = "1"

[dependencies.fastrand]
version = "1.6.0"

[dependencies.remove_dir_all]
version = "0.5"
[dev-dependencies.doc-comment]
version = "0.3"

[features]
nightly = []

[package]
authors = ["Steven Allen <steven@stebalien.com>", "The Rust Project Developers", "Ashley Mannix <ashleymannix@live.com.au>", "Jason White <jasonaw0@gmail.com>"]
description = "A library for managing temporary files and directories."
documentation = "https://docs.rs/tempfile"
edition = "2018"
exclude = ["/.travis.yml", "/appveyor.yml"]
homepage = "http://stebalien.com/projects/tempfile-rs"
keywords = ["tempfile", "tmpfile", "filesystem"]
license = "MIT OR Apache-2.0"
name = "tempfile"
repository = "https://github.com/Stebalien/tempfile"
version = "3.3.0"
[target."cfg(any(unix, target_os = \"wasi\"))".dependencies.libc]
version = "0.2.27"
[target."cfg(target_os = \"redox\")".dependencies.redox_syscall]
version = "0.2.9"
[target."cfg(windows)".dependencies.winapi]
features = ["fileapi", "handleapi", "winbase"]
version = "0.3"
