[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0.45"

[lib]
proc-macro = true

[package]
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Implementation detail of the `thiserror` crate"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "thiserror-impl"
repository = "https://github.com/dtolnay/thiserror"
rust-version = "1.31"
version = "1.0.38"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
