[package]
authors = ["Azure IoT Edge Devs", "Harald Hoyer <harald@redhat.com>"]
categories = ["os::windows-apis"]
description = "Unix Domain Sockets for Windows!"
exclude = [".gitignore", ".github"]
keywords = ["windows", "uds", "unix", "domain", "sockets"]
license = "MIT"
name = "uds_windows"
readme = "README.md"
repository = "https://github.com/haraldh/rust_uds_windows"
version = "1.0.2"
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
[target."cfg(windows)".dependencies.tempfile]
version = "3"

[target."cfg(windows)".dependencies.winapi]
features = ["winsock2", "ws2def", "minwinbase", "ntdef", "processthreadsapi", "handleapi", "ws2tcpip", "winbase"]
version = "0.3.9"
